--- a/css/photos.css
+++ b/css/photos.css
@@ -1,7 +1,7 @@
 #photo-container{
     line-height: 0;
-    -webkit-column-count: 5;
-    -moz-column-count: 5;
+   bkit-column-count: 5;
+    -moz-column-count -we: 5;
     column-count: 5;
     -webkit-column-gap: 10px;
     -moz-column-gap: 10px;
